--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -11,37 +11,61 @@
     <div class="container">
         <div class="panel panel--palette">
             <div class="panel__pane">
-                <div class="tool tool--md">
-                    <div class="tool__ink" style="background-color: #ff0000;"></div>
-                    <img src="drawable/palette__ink.svg" alt="Select ink" class="tool__icon tool__icon--md" />
+                <div class="tool" xstyle="display: none;">
+                    <div class="tool__color tool__color--transparent"></div>
+                    <img src="drawable/palette__color.svg" alt="Select color" class="tool__icon" />
                 </div>
-                <div class="tool tool--md">
-                    <div class="tool__paper" style="border-color: #ff0000;"></div>
-                    <img src="drawable/palette__paper.svg" alt="Select paper" class="tool__icon tool__icon--md" />
+                <div class="tool">
+                    <div class="tool__color_ink tool__color_ink--transparent"></div>
+                    <img src="drawable/palette__ink.svg" alt="Select ink" class="tool__icon" />
                 </div>
-                <div class="tool tool--md" style="display: none;">
-                    <div class="tool__color" style="background-color: #ff0000;"></div>
-                    <img src="drawable/palette__color.svg" alt="Select color" class="tool__icon tool__icon--md" />
+                <div class="tool">
+                    <div class="tool__color_paper tool__color_paper--transparent"></div>
+                    <img src="drawable/palette__paper.svg" alt="Select paper" class="tool__icon" />
                 </div>
-                <img src="drawable/palette__bright.svg" alt="Select bright" class="tool tool--md tool--selected" />
-                <img src="drawable/palette__flash.svg" alt="Select flash" class="tool tool--md" />
-                <img src="drawable/palette__character.svg" alt="Select character" class="tool tool--md" />
+                <div class="tool">
+                    <div class="tool__light tool__light--off"></div>
+                    <img src="drawable/palette__bright.svg" alt="Select bright" class="tool__icon" />
+                </div>
+                <div class="tool">
+                    <div class="tool__light tool__light--on"></div>
+                    <img src="drawable/palette__flash.svg" alt="Select flash" class="tool__icon" />
+                </div>
+                <div class="tool">
+                    <img src="drawable/palette__character.svg" alt="Select character" class="tool" />
+                </div>
             </div>
             <div class="panel__pane">
-                <img src="drawable/layers.svg" alt="Layers" class="tool tool--md" />
+                <div class="tool">
+                    <img src="drawable/layers.svg" alt="Layers" class="tool__icon" />
+                </div>
             </div>
         </div>
         <div class="panel panel--toolbox">
             <div class="panel__pane">
-                <img src="drawable/tool__paint.svg" alt="Paint" class="tool tool--md tool--selected" />
-                <img src="drawable/tool__erase.svg" alt="Erase" class="tool tool--md" />
-                <img src="drawable/tool__select.svg" alt="Select" class="tool tool--md" />
-                <img src="drawable/tool__pick_color.svg" alt="Pick color" class="tool tool--md" />
+                <div class="tool tool--active">
+                    <img src="drawable/tool__paint.svg" alt="Paint" class="tool__icon" />
+                </div>
+                <div class="tool">
+                    <img src="drawable/tool__erase.svg" alt="Erase" class="tool__icon" />
+                </div>
+                <div class="tool">
+                    <img src="drawable/tool__select.svg" alt="Select" class="tool__icon" />
+                </div>
+                <div class="tool">
+                    <img src="drawable/tool__pick_color.svg" alt="Pick color" class="tool__icon" />
+                </div>
             </div>
             <div class="panel__pane">
-                <img src="drawable/toolbox__undo.svg" alt="Undo" class="tool tool--md tool--active" />
-                <img src="drawable/toolbox__redo.svg" alt="Redo" class="tool tool--md" />
-                <img src="drawable/menu.svg" alt="Menu" class="tool tool--md" />
+                <div class="tool">
+                    <img src="drawable/toolbox__undo.svg" alt="Undo" class="tool__icon" />
+                </div>
+                <div class="tool">
+                    <img src="drawable/toolbox__redo.svg" alt="Redo" class="tool__icon" />
+                </div>
+                <div class="tool">
+                    <img src="drawable/menu.svg" alt="Menu" class="tool__icon" />
+                </div>
             </div>
         </div>
     </div>
