--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -45,7 +45,7 @@
                 <div class="tool">
                     <img src="drawable/selection__copy.svg" alt="Copy" class="tool__icon" />
                 </div>
-                <div class="tool">
+                <div class="tool tool--active">
                     <img src="drawable/layers.svg" alt="Layers" class="tool__icon" />
                 </div>
             </div>
@@ -88,31 +88,31 @@
         </div>
         <div class="subpanel subpanel--palette hidden">
             <div class="panel__pane">
-                <div class="tool tool--sm">
+                <div class="tool tool--md">
                     <div class="tool__color tool__color--0"></div>
                 </div>
-                <div class="tool tool--sm">
+                <div class="tool tool--md">
                     <div class="tool__color tool__color--1"></div>
                 </div>
-                <div class="tool tool--sm">
+                <div class="tool tool--md">
                     <div class="tool__color tool__color--2"></div>
                 </div>
-                <div class="tool tool--sm">
+                <div class="tool tool--md">
                     <div class="tool__color tool__color--3"></div>
                 </div>
-                <div class="tool tool--sm">
+                <div class="tool tool--md">
                     <div class="tool__color tool__color--4"></div>
                 </div>
-                <div class="tool tool--sm">
+                <div class="tool tool--md">
                     <div class="tool__color tool__color--5"></div>
                 </div>
-                <div class="tool tool--sm">
+                <div class="tool tool--md">
                     <div class="tool__color tool__color--6"></div>
                 </div>
-                <div class="tool tool--sm">
+                <div class="tool tool--md">
                     <div class="tool__color tool__color--7"></div>
                 </div>
-                <div class="tool tool--sm">
+                <div class="tool tool--md">
                     <div class="tool__color tool__color--transparent"></div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                 </div>
             </div>
         </div>
-        <div class="subpanel subpanel--characters subpanel--palette hidden">
+        <div class="subpanel subpanel--palette subpanel--palette_characters hidden">
             <div class="panel__pane">
                 <div class="tool tool--xs">
                     <div class="tool__character tool__character--32"></div>
@@ -482,7 +482,14 @@
                 </div>
             </div>
         </div>
-        <div class="subpanel subpanel--tool hidden">
+        <div class="subpanel subpanel--layers">
+            <div class="panel__pane">
+                <div class="tool tool--sm">
+                    <img src="drawable/layer__create.svg" alt="Create layer" class="tool__icon" />
+                </div>
+            </div>
+        </div>
+        <div class="subpanel subpanel--tools hidden">
             <div class="panel__pane">
                 <div class="tool">
                     <img src="drawable/shape__point.svg" alt="Point" class="tool__icon tool__icon--shape__point" />
