More UI integration

--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -123,16 +123,16 @@
         </div>
         <div class="subpanel subpanel--tools js-shapes-panel">
             <div class="panel__pane">
-                <div class="tool">
+                <div class="tool js-shape-point">
                     <img src="drawable/shape__point.svg" alt="Point" class="tool__icon tool__icon--shape__point" />
                 </div>
-                <div class="tool">
+                <div class="tool js-shape-line">
                     <img src="drawable/shape__line.svg" alt="Line" class="tool__icon tool__icon--shape__line" />
                 </div>
-                <div class="tool">
+                <div class="tool js-shape-stroke-box">
                     <img src="drawable/shape__stroke_box.svg" alt="Stroke box" class="tool__icon tool__icon--shape__stroke_box" />
                 </div>
-                <div class="tool">
+                <div class="tool js-shape-fill-box">
                     <img src="drawable/shape__fill_box.svg" alt="Fill box" class="tool__icon tool__icon--shape__fill_box" />
                 </div>
             </div>
