Working on renderer

--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -13,7 +13,7 @@
     <div class="container hidden js-container">
         <div class="drawing">
             <!-- Border is 32px -->
-            <canvas width="320" height="256" class="drawing__canvas js-canvas"></canvas>
+            <canvas width="320" height="256" class="drawing__sheet js-sheet"></canvas>
         </div>
         <div class="panel panel--palette">
             <div class="panel__pane">
