--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -10,9 +10,9 @@
     <script type="application/javascript" src="app.js"></script>
 </head>
 <body>
+    <div class="loading js-loading"></div>
     <div class="container hidden js-container">
         <div class="drawing">
-            <!-- Border is 32px -->
             <canvas width="320" height="256" class="drawing__sheet js-sheet"></canvas>
         </div>
         <div class="panel panel--palette">
