Render areas (cursor and selection)

--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -14,6 +14,7 @@
     <div class="container hidden js-container">
         <div class="drawing">
             <canvas width="320" height="256" class="drawing__sheet js-sheet"></canvas>
+            <canvas width="320" height="256" class="drawing__areas js-areas"></canvas>
         </div>
         <div class="panel panel--palette">
             <div class="panel__pane">
@@ -21,13 +22,13 @@
                     <div class="tool__color"></div>
                     <img src="drawable/palette__color.svg" alt="Select color" class="tool__icon" />
                 </div>
-                <div class="tool js-palette-ink">
-                    <div class="tool__color_ink"></div>
-                    <img src="drawable/palette__ink.svg" alt="Select ink" class="tool__icon" />
-                </div>
                 <div class="tool js-palette-paper">
                     <div class="tool__color_paper"></div>
                     <img src="drawable/palette__paper.svg" alt="Select paper" class="tool__icon" />
+                </div>
+                <div class="tool js-palette-ink">
+                    <div class="tool__color_ink"></div>
+                    <img src="drawable/palette__ink.svg" alt="Select ink" class="tool__icon" />
                 </div>
                 <div class="tool js-palette-bright">
                     <div class="tool__light"></div>
