Ability to save added

--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -139,8 +139,8 @@
             </div>
         </div>
         <div class="subpanel subpanel--menu js-menu-panel">
-            <div class="menu__item">Load</div>
-            <div class="menu__item">Save</div>
+            <div class="menu__item js-menu-load">Load</div>
+            <div class="menu__item js-menu-save">Save</div>
         </div>
     </div>
 </body>
