Loading and saving added

--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -139,8 +139,13 @@
             </div>
         </div>
         <div class="subpanel subpanel--menu js-menu-panel">
-            <div class="menu__item js-menu-load">Load</div>
-            <div class="menu__item js-menu-save">Save</div>
+            <div class="menu__item">
+                <div class="menu__item-content">Load</div>
+                <input type="file" class="menu__item-load js-menu-load" accept=".bpe" />
+            </div>
+            <div class="menu__item js-menu-save">
+                <div class="menu__item-content">Save</div>
+            </div>
         </div>
     </div>
 </body>
